# cookiecloud-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
src/: client.rs  cookiefile.rs  decrypt.rs  lib.rs  main.rs
tests/: config_test.rs  decrypt_test.rs  export_spec_test.rs
