[package]
name = "cookiecloud-sync"
version = "1.0.0"
edition = "2021"

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
