[package]
name = "cookiecloud-sync"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
clap = { version = "4", features = ["derive", "env"] }
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "registry"] }
zeroize = "1"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
getrandom = "0.2"
